--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,15 +9,12 @@ body {
     -webkit-appearance: none;
     display: inline-block;
     width: 90px;
-    padding: 10px 0;
     border-style: none;
     font-size: 15px;
-    background: #FBD246;
-    margin-bottom: 20px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, .2);
 }
 #okuru,#deau {
-  margin-right: 20px;
+  margin: 20px;
+  margin-top: 30px;
 }
 #username,#password {
     padding: 7px;
@@ -44,10 +41,13 @@ p.hello {
 form {
     padding: 40px auto;
     text-align: center;
+    margin-top: 20px;
 }
-div,p {
-    text-align: center;
+
+div {
+  text-align: center;
 }
+
 li.setumei {
     list-style-type: none;
     text-align: left;
@@ -63,21 +63,14 @@ li.setumei {
     color: #006D4D;
 }
 textarea {
-    line-height: 30px;
-    font-size: 20px;
-    background-image: -webkit-gradient(
-        linear, left top, left bottom, 
-    	color-stop(0%,#ffffcc), 
-		color-stop(96%,#ffffcc), 
-		color-stop(96%,#cccccc), 
-		color-stop(100%,#cccccc)), none;
-    background-size: 2px 30px;
-    background-clip: content-box, padding-box;
-    background-color: #ffffcc;
-    background-origin: content-box, padding-box;
-    margin-bottom: 20px;
-    margin-top: 10px;
-    border-color: #ffffcc;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+	appearance: none;
+  border:none;
+  margin-top:60px;
+  width: 180px;
+  height: 100px;
+  font-size:100%;
 }
 h3 {
     border-bottom: 1px solid #000;
@@ -86,10 +79,18 @@ h3 {
 }
 
 #post {
-  list-style-type: disc;
+  width: 200px;
+  margin-top: 140px;
+  margin-left: 60px;
 }
 
-img {
+.watage {
   width: 100%;
   height: 100%;
+  margin-top: 30px;
+}
+
+#modoru {
+  margin-top: 100px;
+  margin-left: 200px;
 }
